--- a/WebsiteSpending/web-app/css/core.css
+++ b/WebsiteSpending/web-app/css/core.css
@@ -15,12 +15,14 @@ CORE STYLES
 -------------------------------------------------------------	
 */
 
+
 body {
     background: #fff;
     font: lighter 62.5%/1.4 "lucida grande", helvetica, arial, verdana, sans-serif;
     color: #333;
     margin:0;
     padding:0;
+    height:100%;
 }
 
 
@@ -146,6 +148,7 @@ ul.section-subnav li em { font-style:normal; font-weight:normal; font-size:0.85e
 #wrapper {
     background-color: #404040;
     margin: 0;
+    height:100%;
 }
 
 #content-outer-wrapper {
@@ -772,3 +775,12 @@ textarea {
 
 h1.chartTitle{text-align: center;color:HoneyDew}
 span.chartTitle{text-align: center;font-size: 3em;color:HoneyDew}
+
+
+
+#holder {
+    width: 1100px;
+    height: 700px;
+    margin-left:auto;
+    margin-right:auto;
+}
